--- a/stars.scss
+++ b/stars.scss
@@ -5,11 +5,14 @@
     align-items: center;
 
     .star {
-        flex: 0 0 50px;
+        flex: 0 0 100px;
         margin: 10px;
 
         cursor: pointer;
 
+        svg {
+            width: 50px;
+        }
         svg path {
             stroke: darkblue;
             fill: transparent;
@@ -17,12 +20,26 @@
             transition: .5s ease;
         }
        
-        
+        &:hover svg path {
+            fill: yellow;
+        }
     }
     .highlight svg path {
         fill: lightblue;
+        
     }
     
 }
 
 
+@keyframes embiggen {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
